--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 
+    <meta property="og:image" content="https://raw.githubusercontent.com/ghoozie/ghoozie/master/assets/img/ghoozie_square_og.jpg" />
+
     
 
 </head>
