--- a/phantom/index.html
+++ b/phantom/index.html
@@ -9,7 +9,7 @@
 		<title>Oliver Terrell</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta property="og:image" content="../assets/img/ghoozie_square_og.jpg" />
+		<meta property="og:image" content="https://raw.githubusercontent.com/ghoozie/ghoozie/master/assets/img/ghoozie_square_og.jpg" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
