--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
 <head>
 
-    <meta property="og:image" content="https://raw.githubusercontent.com/ghoozie/ghoozie/master/assets/img/ghoozie_square_og.jpg" />
+        <!-- Fb sharing things -->
+            <!-- <meta property="og:url" content="https://ghoozie.tk" />
+            <meta property="og:type" content="website" />
+            <meta property="og:title" content="ghoozie" />
+            <meta property="og:description" content="portfolio website for @ghoozie" /> -->
+            <meta property="og:image" content="https://raw.githubusercontent.com/ghoozie/ghoozie/master/assets/img/ghoozie_square_og.jpg" />
+		<!-- /Fb -->
+		
 
     
 
