--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
 
         <!-- Fb sharing things -->
-            <!-- <meta property="og:url" content="https://ghoozie.tk" />
+            <meta property="og:url" content="https://ghoozie.tk" />
             <meta property="og:type" content="website" />
             <meta property="og:title" content="ghoozie" />
-            <meta property="og:description" content="portfolio website for @ghoozie" /> -->
+            <meta property="og:description" content="ghoozie" />
             <meta property="og:image" content="https://raw.githubusercontent.com/ghoozie/ghoozie/master/assets/img/ghoozie_square_og.jpg" />
 		<!-- /Fb -->
 		
