--- a/phantom/index.html
+++ b/phantom/index.html
@@ -7,10 +7,21 @@
 <html>
 	<head>
 		<title>Oliver Terrell</title>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-GMCEZVKBGT"></script>
+		<script>
+			  window.dataLayer = window.dataLayer || [];
+			  function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
+	
+			  gtag('config', 'G-GMCEZVKBGT');
+		</script>
+
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
-		<!-- Fb sharing things -->
+		<!-- Fb metas -->
 			<meta property="og:url" content="https://ghoozie.tk" />
 			<meta property="og:type" content="website" />
 			<meta property="og:title" content="ghoozie" />
