--- a/phantom/code.html
+++ b/phantom/code.html
@@ -123,7 +123,7 @@ whatever you want to see</code></pre></td>
 			<table class="alt" style="margin-bottom:8px;">
 				<thead>
 					<tr style="line-height: 120%;">
-					<th colspan="1" style="vertical-align: middle;width:10%"><h3><a href="https://github.com/ghoozie/Reactangles" target="_blank" style="border-bottom: none;"><i class="icon brands fas fa-github" aria-hidden="true" style="width:100%;text-align:center;bottom:5px;"></i><code>Reactangles.js</code></a></h3></th>
+					<th colspan="1" style="vertical-align: middle;width:10%"><h3><a href="https://github.com/ghoozie/Reactangles" target="_blank" style="border-bottom: none;"><code>Reactangles.js</code><i class="icon brands fas fa-github" aria-hidden="true" style="width:100%;text-align:center;top:8px;"></i></a></h3></th>
 					<td colspan="2" style="text-align: center;"><blockquote><sup>Reactangles.js is a library I made based on an idea of my friend <a href="https://github.com/jacoby149" target="_blank">Jacob Hoffman</a>. This library allows for very simple CSS styling of rectangular elements by passing style parameters as props in functional components. The advantage of Reactangles.js is that it allows for very easy UI design without needing Node.js on the back end. If you like using React via CDN, Reactangles.js is for you.</sup></blockquote></td>
 					</tr>
 					<tr>
@@ -144,7 +144,7 @@ whatever you want to see</code></pre></td>
 				<table class="alt" style="margin-bottom:8px;" id="sql-library">
 					<thead>
 						<tr style="line-height: 120%;">
-						<th colspan="1" style="vertical-align: middle;width:10%;text-align:center;""><h3><a href="https://github.com/ghoozie/ghoozie/blob/master/db_php.docx" target="_blank" style="border-bottom: none;"><i class="icon brands fas fa-github" aria-hidden="true" style="width:100%;text-align:center;bottom:5px;"></i><code>SQL</code></a></h3></th>
+						<th colspan="1" style="vertical-align: middle;width:10%;text-align:center;""><h3><code>SQL</code></a></h3></th>
 						<td colspan="2" style="text-align: center;"><blockquote><sup>Here is a library I wrote initially in PHP to make SQL querying a breeze. Allows you to easily use select, insert, and update queries to a MySQL database. I also wrote this dictionary in Python and it works the same. Select which language you want to view the code in with the buttons on the right. They work a bit different from one another because the projects I extracted them from each had their own necessities, but the basic utility remains the same.</sup></blockquote></td>
 						</tr>
 						<tr>
