--- a/phantom/code.html
+++ b/phantom/code.html
@@ -341,7 +341,7 @@ function update_query($mysqli, $table_name, $eq_dict, $change_dict) {
 from mysql.connector import connection
 
 <strong># Set to true to print feedback to console</strong>
-show = False;
+show = False
 
 <strong># For use when multiple queries are happening quickly</strong>
 wait_string = ""
