--- a/phantom/code.html
+++ b/phantom/code.html
@@ -348,10 +348,10 @@ wait_string = ""
 
 <strong># Database connection settings</strong>
 db = {"host": "db.host.ip.address",
-&emsp; &emsp; &emsp; &ensp; "user": "database username",
-&emsp; &emsp; &emsp; &ensp; "password": "database password",
-&emsp; &emsp; &emsp; &ensp; "schema": "schema name",
-&emsp; &emsp; &emsp; &ensp; }
+&emsp; &emsp; &emsp; "user": "database username",
+&emsp; &emsp; &emsp; "password": "database password",
+&emsp; &emsp; &emsp; "schema": "schema name",
+&emsp; &emsp; &emsp; }
 
 <strong># This time it's a function we call to allow for one connection at a time when querying a lot</strong>
 def make_connection():
