--- a/phantom/aboutme.html
+++ b/phantom/aboutme.html
@@ -32,7 +32,7 @@
 
 						<!-- Logo -->
 							<a href="index.html" class="logo">
-								<span class="symbol"><img src="../assets/img/favicon.ico" alt="" /></span><span class="title">
+								<span class="symbol"><img src="../assets/img/golden-globe.ico" alt="" /></span><span class="title">
 									<script>
 										if (window.location.href.includes('index.html')) {
 											document.write('Welcome');
